# TestLibraryApp

./: README.md  books.json  main.py  pyproject.toml
core/application/: application_handler.py
core/application/menu_items/: app.py  base.py  exceptions.py  utils.py
core/domain/entities/: base.py  books.py
core/domain/exceptions/: base.py  books.py
core/domain/values/: base.py  books.py
core/infra/converters/: books.py
core/infra/exceptions/: base.py  books.py
core/infra/filters/: books.py
core/infra/repositories/: base.py  books.py
core/logic/: container.py  mediator.py
core/logic/commands/: base.py  books.py
core/logic/exceptions/: base.py  mediator.py
core/settings/: config.py
core/tests/: conftest.py
core/tests/domain/entities/: test_books.py
core/tests/domain/values/: test_books_values.py
core/tests/infra/converters/: test_books_converters.py
core/tests/infra/repositories/: test_books_repository.py
core/tests/logic/: test_mediator.py
