[tool.poetry]
name = "testlibraryapp"
version = "0.1.0"
description = ""
authors = ["Naury <koertyf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
faker = "^26.0.0"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
